IT класс: сделан footer

--- a/landing_for_it_class/index.html
+++ b/landing_for_it_class/index.html
@@ -79,7 +79,7 @@
                         <img src="img/photo-stalker.svg">
                     </div>
                 </div>
-                <p class="about__mini-label">Подробности узнайте в it полигоне</p>
+                <p class="about__mini-label">Подробности узнай в it полигоне</p>
             </div>
         </div>
     </section>
@@ -117,20 +117,20 @@
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">15:15 - 15:45</div>
                                 <div class="timetable__dates__events-list__element__name">Создание брелока</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">1 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">На этом мастер-классе ты сам создашь собственный брелок со своим дизайном и логотипом. Брелок будет отличным дополнением к твоим ключам. А также брелок можно повесить на своего любимого питомца чтобы он никогда не потерялся.)</div>
+                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">7 It-coin</span> Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">На этом мастер-классе ты сам создашь собственный брелок со своим дизайном и логотипом. Брелок будет отличным дополнением к твоим ключам. А также брелок можно повесить на своего любимого питомца чтобы он никогда не потерялся.)<br><br>Проходит в it полигоне</div>
                             </div>
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">15:15 - 15:45</div>
                                 <div class="timetable__dates__events-list__element__name">Создание наклейки</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">1 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">Сделать макет наклейки самостоятельно на нашем мастер-классе — проще простого! Вы не только разработаете макет, но и сразу получите свою наклейку на руки. Можно создать наклейку на тетрадь, карту проход питание, на блокнот или на любой другой предмет</div>
+                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">7 It-coin</span> Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Сделать макет наклейки самостоятельно на нашем мастер-классе — проще простого! Вы не только разработаете макет, но и сразу получите свою наклейку на руки. Можно создать наклейку на тетрадь, карту проход питание, на блокнот или на любой другой предмет<br><br>Проходит в it полигоне</div>
                             </div>
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
                                 <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">1 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">Ждем информации</div>
+                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">It-coin</span> Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Собери команду из трех человек. Одного капитана и двух управляющих. Приходи с командой в назначенное время и управляй роботом на турнире. Участие в турнире по vex - <span style="color: gold;">2 it-coin</span>, победа <span style="color: gold;">3 it-coin</span>.<br><br>Проходит в it полигоне</div>
                             </div>
                         </div>
                     </div>
@@ -147,20 +147,20 @@
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">15:30 - 16:15</div>
                                 <div class="timetable__dates__events-list__element__name">Заведи себе таракана</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">1 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">На мастер-классе ты создашь электрического таракашку. С помощью подручных средств: паяльника, клея и вибромоторчика мы соберём бегущего таракана, с которым ты проведешь много времени прежде чем научить его слушаться тебя. А в среду твой таракан сможете поучаствовать в забеге! Нужна зубная щётка.</div>
+                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">7 It-coin</span> Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">На мастер-классе ты создашь электрического таракашку. С помощью подручных средств: паяльника, клея и вибромоторчика мы соберём бегущего таракана, с которым ты проведешь много времени прежде чем научить его слушаться тебя. А в среду твой таракан сможете поучаствовать в забеге! Нужна зубная щётка.<br><br>Проходит в it полигоне</div>
                             </div>
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
                                 <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">1 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">Ждем информацию</div>
+                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">It-coin</span> Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Собери команду из трех человек. Одного капитана и двух управляющих. Приходи с командой в назначенное время и управляй роботом на турнире. Участие в турнире по vex - <span style="color: gold;">2 it-coin</span>, победа <span style="color: gold;">3 it-coin</span>.<br><br>Проходит в it полигоне</div>
                             </div>
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">Весь день</div>
                                 <div class="timetable__dates__events-list__element__name">Квиз</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">1 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">Ищи вопросы по школе, отвечай на них правильно и получай за каждый правильный ответ 1 it-coin.</div>
+                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">It-coin</span> Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Ищи вопросы по школе, отвечай на них правильно и получай за каждый правильный ответ <span style="color: gold;">1 it-coin</span>.</div>
                             </div>
                         </div>
                     </div>
@@ -176,26 +176,29 @@
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">14:00 - 14:30</div>
                                 <div class="timetable__dates__events-list__element__name">3D моделирование</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">1 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">В приложении autodesk inventor ты разработаешь 3D модель, которую потом сможешь напечатать. Можно создать статуэтку для мамы, а может быть для своего друга ты разработаешь половинки медальонов.</div>
+                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">7 It-coin</span> Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">В приложении autodesk inventor ты разработаешь 3D модель, которую потом сможешь напечатать. Можно создать статуэтку для мамы, а может быть для своего друга ты разработаешь половинки медальонов.
+                                    <br><br>Проходит в it полигоне</div>
                             </div>
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">14:30 - 15:15</div>
                                 <div class="timetable__dates__events-list__element__name">3D моделирование</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">1 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">В приложении autodesk inventor ты разработаешь 3D модель, которую потом сможешь напечатать. Можно создать статуэтку для мамы, а может быть для своего друга ты разработаешь половинки медальонов.</div>
+                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">7 It-coin</span> Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">В приложении autodesk inventor ты разработаешь 3D модель, которую потом сможешь напечатать. Можно создать статуэтку для мамы, а может быть для своего друга ты разработаешь половинки медальонов.
+                                    <br><br>Проходит в it полигоне</div>
                             </div>
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">15:00</div>
                                 <div class="timetable__dates__events-list__element__name">Тараканьи бега</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">2 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">Каждый участник забега получает по 2 it-coin, а за победу 10 it-coin, 2 место – 5 it-coin, 1 место – 3 it-coin</div>
+                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">It-coin</span> Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Каждый участник забега получает по <span style="color: gold;">2 it-coin</span>, а за победу <span style="color: gold;">10 it-coin</span>, 2 место – <span style="color: gold;">5 it-coin</span>, 3 место – <span style="color: gold;">3 it-coin</span>
+                                    <br><br>Проходит в it полигоне</div>
                             </div>
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">Весь день</div>
                                 <div class="timetable__dates__events-list__element__name">Квиз</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">1 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">Ищи вопросы по школе, отвечай на них правильно и получай за каждый правильный ответ 1 it-coin.</div>
+                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">It-coin</span> Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Ищи вопросы по школе, отвечай на них правильно и получай за каждый правильный ответ <span style="color: gold;">1 it-coin</span>.</div>
                             </div>
                         </div>
                     </div>
@@ -212,8 +215,8 @@
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">8:00 - 9:00</div>
                                 <div class="timetable__dates__events-list__element__name">Работа банка</div>
-                                <div class="timetable__dates__events-list__element__open-more"><span class="pr-3">7 It-coin</span> Подробнее</div>
-                                <div class="timetable__dates__events-list__element__more-text">Раздают))</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">В it полигоне можно купить товары за <span style="color: gold;">It-coin</span></div>
                             </div>
                         </div>
                     </div>
