IT класс: сделан footer

--- a/landing_for_it_class/index.html
+++ b/landing_for_it_class/index.html
@@ -227,7 +227,7 @@
     </section>
 
     <footer>
-        <a href="#">Потратить It коины</a>
+        <a href="https://info1158.site" class="link-to-join my-5">Потратить It коины</a>
         <p>ГБОУ школа № 1158. © Все права защищены</p>
     </footer>
 
